@@ -44,6 +44,7 @@
 - always set direct mounts catatonic at exit.
 - fix use-after-free in st_queue_handler().
 - log pipe read errors.
+- fix handle_mounts() termination condition check.
 
 21/04/2015 autofs-5.1.1
 =======================
